# Nanoforge

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  CMakeSettings.json  GenerateVS2022Solution.bat  GitSubmodule.cmake  Nanoforge.sln  README.md  TUTORIALS.txt
Dependencies/: CMakeLists.txt
Nanoforge/: App.axaml  App.axaml.cs  BuildConfig.cs  BuildConfig.h  CMakeLists.txt  CrashHandler.cpp  CrashHandler.h  Log.cpp  Log.h  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Nanoforge.cpp  Nanoforge.csproj  Program.cs  ViewLocator.cs  WorkerThread.h  app.manifest
Nanoforge/Assets/shaders/: Pixlit.hlsl  TerrainStitch.hlsl
Nanoforge/Editor/: Config.cs  EditorObject.cs  GeneralSettings.cs  NanoDB.cs  NanoDBReferenceResolver.cs  NanoDBTypeResolver.cs  Project.cs  ProjectBuffer.cs
Nanoforge/FileSystem/: DirectoryEntry.cs  EntryBase.cs  FileEntry.cs  PackfileVFS.cs
Nanoforge/Gui/: DockExtensions.cs  Input.cs
Nanoforge/Gui/Themes/: FluentThemeManager.cs  IThemeManager.cs
Nanoforge/Gui/ViewModels/: DockFactory.cs  MainWindowViewModel.cs  MapOptionViewModel.cs  MenuItemViewModel.cs  NanoforgeDocument.cs  ViewModelBase.cs
Nanoforge/Gui/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Nanoforge/Math/: BoundingBox.cs  Ray.cs
Nanoforge/Misc/: DataHelper.cs  Extensions.cs  RfgNameAttribute.cs  ServiceProviderExtensions.cs  Toggleable.cs
Nanoforge/Render/: Camera.cs  Materials.cs  MathHelper.cs  MathHelpers.cs  MeshConverter.cs  PrimitiveRenderer.cs  RenderCommand.cs  RenderContext.cs  Renderer.cs  Scene.cs  TextureManager.cs
Nanoforge/Render/Materials/: DescriptorAllocator.cs  MaterialHelper.cs  MaterialInstance.cs  MaterialPipeline.cs
Nanoforge/Render/Misc/: ColoredVertex.cs  GpuFrameDataWriter.cs  LineVertex.cs  MaterialInstance.cs  MaterialType.cs  ObjectConstantsWriter.cs  PerFrameBuffer.cs  PerObjectConstants.cs  PerObjectPushConstants.cs  QueueFamilyIndices.cs  SwapChainSupportDetails.cs  VkDrawIndexedIndirectCommand.cs
Nanoforge/Render/Resources/: Buffer.cs  Material.cs  Mesh.cs  RenderChunk.cs  RenderMeshConfig.cs  RenderObject.cs  RenderObjectBase.cs  Shader.cs  SimpleRenderObject.cs  Texture.cs  Texture2D.cs  VkBuffer.cs  VkMemory.cs
Nanoforge/Render/VertexFormats/: UnifiedVertex.cs
Nanoforge/Rfg/: Chunk.cs  ImportedTextures.cs  ProjectMesh.cs  ProjectTexture.cs  Rock.cs  TerrainSubzone.cs  Territory.cs  TextureIndex.cs  Types.cs  Zone.cs  ZoneObjects.cs  ZoneTerrain.cs
Nanoforge/Rfg/Export/: ZoneExporter.cs  ZoneFileWriter.cs
Nanoforge/Rfg/Import/: ChunkImporter.cs  MapImporter.cs  TerrainImporter.cs  ZoneImporter.cs
Nanoforge/Services/: FileDialogService.cs  IFileDialogService.cs
Nanoforge/application/: Application.cpp  Application.h  Config.cpp  Config.h  Registry.cpp  Registry.h  Settings.cpp  Settings.h
Nanoforge/application/project/: FileEdit.h  Project.cpp  Project.h
Nanoforge/assets/fonts/: SIL Open Font License.txt
Nanoforge/assets/shaders/: Colorspace.glsl  Constants.glsl  Linelist.frag  Linelist.vert  Pixlit1Uv.frag  Pixlit1Uv.hlsl  Pixlit1Uv.vert  Pixlit1UvNmap.frag  Pixlit1UvNmap.vert  Pixlit2UvNmap.frag  Pixlit2UvNmap.vert  Pixlit3UvNmap.frag  Pixlit3UvNmap.vert  Pixlit4UvNmap.frag  Pixlit4UvNmap.vert  SolidTriList.frag  SolidTriList.vert  Terrain.frag  Terrain.vert  TerrainLowLod.frag  TerrainLowLod.hlsl  TerrainLowLod.vert  TerrainStitch.frag  TerrainStitch.vert  UnifiedMaterial.frag  UnifiedMaterial.vert
Nanoforge/cli/: CommandLine.cpp  CommandLine.h
Nanoforge/ext/: WindowsWrapper.h
Nanoforge/gui/: GuiState.h  IGuiPanel.h  MainGui.cpp  MainGui.h  MenuItem.cpp  MenuItem.h  WelcomeGui.cpp  WelcomeGui.h
Nanoforge/gui/documents/: AsmDocument.cpp  AsmDocument.h  Document.h  IDocument.h  LocalizationDocument.cpp  LocalizationDocument.h  PegHelpers.cpp  PegHelpers.h  StaticMeshDocument.cpp  StaticMeshDocument.h  TerritoryDocument.cpp  TerritoryDocument.h  TextureDocument.cpp  TextureDocument.h  TextureDocumentState.h  XtblDocument.cpp  XtblDocument.h
Nanoforge/gui/misc/: Changelog.cpp  Changelog.h  SettingsGui.cpp  SettingsGui.h  WelcomeGui.cpp  WelcomeGui.h
Nanoforge/gui/panels/: FileExplorer.cpp  LogPanel.cpp  LogPanel.h  ScriptxEditor.h  StartPanel.cpp  StartPanel.h  StatusBar.cpp  StatusBar.h  ZoneList.cpp  ZoneList.h  ZoneObjectsList.cpp  ZoneObjectsList.h
Nanoforge/gui/util/: HelperGuis.cpp  HelperGuis.h  Popup.cpp  Popup.h  WinUtil.cpp  WinUtil.h
Nanoforge/render/: Render.cpp  Render.h
Nanoforge/render/backend/: DX11Renderer.cpp  DX11Renderer.h
Nanoforge/render/camera/: Camera.cpp  Camera.h
Nanoforge/render/imgui/: ImGuiConfig.cpp  ImGuiConfig.h  ImGuiFontManager.cpp  ImGuiFontManager.h  VsCodeIconFont.h  imgui_ext.cpp  imgui_ext.h
Nanoforge/render/resources/: Buffer.cpp  Buffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderChunk.cpp  RenderChunk.h  RenderObject.cpp  RenderObject.h  (+6 more)
Nanoforge/rfg/: FileCache.h  FileHandle.cpp  FileHandle.h  FileNode.cpp  Importers.cpp  Importers.h  Localization.cpp  Localization.h  PackfileVFS.cpp  PackfileVFS.h  Tasks.h  TerrainHelpers.h  Territory.cpp  Territory.h  TextureIndex.cpp  TextureIndex.h
Nanoforge/util/: Hash.h  MathUtil.h  MeshUtil.cpp  MeshUtil.h  Profiler.h  RfgUtil.cpp  RfgUtil.h  StringHelpers.cpp  StringHelpers.h  TaskScheduler.cpp  TaskScheduler.h
Project28/: CMakeLists.txt  Project28.cpp
Project28/application/: Application.cpp  Application.h
Project28/ext/: WindowsWrapper.h  im3d_config.h
Project28/gui/: MainGui.cpp  MainGui.h  TerrainHelpers.h
Project28/rfg/: FileHandle.cpp  FileHandle.h  PackfileVFS.cpp  PackfileVFS.h
RFViewer/: CMakeLists.txt  Log.cpp  Log.h  WorkerThread.h
RFViewer/application/: Application.cpp  Application.h  Settings.cpp  Settings.h
RFViewer/gui/: GuiBase.h  GuiState.h  MainGui.cpp  MainGui.h  MenuItem.h
RFViewer/rfg/: FileCache.cpp  FileNode.cpp  FileNode.h  PackfileVFS.cpp  PackfileVFS.h  Territory.cpp  Territory.h  ZoneManager.cpp  ZoneManager.h
RFViewer/util/: RfgUtil.cpp  RfgUtil.h  StringHelpers.cpp  StringHelpers.h
(+335 files in other folders)
